--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
             <artifactId>h2</artifactId>
             <version>2.2.224</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.10.2</version>
+        </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
