--- a/src/main/java/pom.xml
+++ b/src/main/java/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.11.1</version> <!-- Use the latest stable version -->
+        </dependency>
     </dependencies>
 
     <build>
